objects/my_royall_com_activity__c.object
<CustomObject>
    <description>Contact as parent - houses all &apos;MyRoyall&apos; logins/fails,etc..</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>my.royall.com activity</relationshipLabel>
        <relationshipName>my_royall_com_activity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>my.royall.com activity</label>
    <nameField>
        <label>my.royall.com activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>my.royall.com activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>